feat: atualiza dependências do frontend e melhora serviço de API
- Atualizada versão do Next.js para ^16.2.9 e adicionada dependência lucide-react.

- Refatorado serviço de API para gerenciar tokens e analisar respostas de forma mais eficiente.

- Introduzidas novas interfaces para perfil de usuário e atualizações de perfil.

- Adicionado tratamento de erros para autenticação e validação nas respostas da API.

- Implementado novo serviço para validação de imagens de perfil humano com verificações por IA.

feat: adiciona tratamento global de exceções e endpoint de health check no backend

- Criado GlobalExceptionHandler para gerenciar erros de validação e autenticação.

- Adicionado HealthController com um endpoint simples para verificação de status.

- Introduzido DTO PerfilUpdateRequest para requisições de atualização de perfil com restrições de validação.

feat: implementa serviço de validação de imagens de perfil

- Desenvolvido serviço profileImageAI para validar imagens enviadas usando métricas de IA.

- Incluídas funções para análise de imagens, detecção de rostos e pontuação de qualidade da imagem.